--- a/17.1. 트랜스포머(Transformer).md
+++ b/17.1. 트랜스포머(Transformer).md
@@ -1,1 +1,7 @@
+## 17.1. 트랜스포머(Transformer)
+- 트랜스포머
+  - 2017년 구글 논문 "Attention is all you need"
+  - 기존의 seq2seq의 구조인 인코더-디코더를 따르면서도, 어텐션(Attention)만으로 구현한 모델
+  - RNN을 사용하지 않고, 인코더-디코더 구조를 설계하였음에도 성능도 RNN보다 우수함.
 
+# 
