--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -1,4 +1,4 @@
-### 17.1. 트랜스포머(Transformer)
+# 17.1. 트랜스포머(Transformer)
 - 트랜스포머
   - 2017년 구글 논문 "Attention is all you need"
   - 기존의 seq2seq의 구조인 인코더-디코더를 따르면서도, 어텐션(Attention)만으로 구현한 모델
@@ -34,3 +34,24 @@
   - 피드 포워드 신경망의 은닉층의 크기
 
 ## 17.1.3. 트랜스포머(Transformer)
+
+![image](https://user-images.githubusercontent.com/42113942/131215118-cb749a54-824f-45c8-9dbd-52e29cdc6b66.png)
+
+![image](https://user-images.githubusercontent.com/42113942/131215113-5945fcb0-eb10-4616-b279-a1465d753de9.png)
+
+- RNN을 사용하지 않지만 인코더-디코더 구조를 유지함.
+- 다른 점은 인코더와 디코더라는 단위가 N개가 존재할 수 있음.
+  - 이전 seq2seq 구조에서는 인코더와 디코더에서 각각 하나의 RNN이 t개의 시점(time-step)을 가지는 구조였다면 이번에는 인코더와 디코더라는 단위가 N개로 구성되는 구조
+  - 논문에서는 인코더와 디코더 각 6개 사용함(2번째 그림).
+
+![image](https://user-images.githubusercontent.com/42113942/131215120-4b21660a-089f-443f-a6d1-17c9f2cbd218.png)
+
+- 위 그림은 인코더로부터 정보를 전달받아 디코더가 출력 결과를 만들어내는 트랜스포머 구조를 보여줌.
+- 디코더는 마치 기존의 seq2seq 구조처럼 시작 심볼 <sos>를 입력으로 받아 종료 심볼 <eos>가 나올 때까지 연산을 진행함.
+  - RNN은 사용되지 않지만 여전히 인코더-디코더의 구조는 유지되고 있음을 보여줌.
+
+- 이제 트랜스포머의 내부 구조를 조금씩 확대
+  - 트랜스포머의 인코더와 디코더는 단순히 각 단어의 임베딩 벡터들을 입력받는 것이 아니라 임베딩 벡터에서 조정된 값을 입력받음. 
+  - 입력 부분부터 확대
+  
+## 17.1.4. 포지셔널 인코딩(Positional Encoding)
