--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -55,3 +55,100 @@
   - 입력 부분부터 확대
   
 ## 17.1.4. 포지셔널 인코딩(Positional Encoding)
+- RNN은 단어를 순차적으로 입력받아서 처리하여 각 단어의 위치 정보(position information)를 가질 수 있음.
+- 하지만 트랜스포머는 단어 입력을 순차적으로 받는 방식이 아니므로 단어의 위치 정보를 다른 방식으로 알려줄 필요가 있음.
+- 포지셔널 인코딩: 단어의 위치 정보를 얻기 위해서 각 단어의 임베딩 벡터에 위치 정보들을 더하여 모델의 입력으로 사용하는 것
+
+![image](https://user-images.githubusercontent.com/42113942/131222740-2d1e3f30-f87e-4f5b-af83-c40c9b229fe1.png)
+
+- 위 그림은 입력으로 사용되는 임베딩 벡터들이 트랜스포머의 입력으로 사용되기 전에 포지셔널 인코딩값이 더해지는 것을 보여줌.
+
+- 아래 그림은 임베딩 벡터가 인코더의 입력으로 사용되기 전에 포지셔널 인코딩값이 더해지는 과정을 시각화
+  
+![image](https://user-images.githubusercontent.com/42113942/131222769-727638f6-661c-4472-be55-d6c05769d038.png)
+
+- 포지셔널 인코딩의 값은 아래 두 함수를 사용하여 도출됨.
+
+![image](https://user-images.githubusercontent.com/42113942/131222969-9c6f639e-dc2d-4486-ae65-b6b48f37ceb4.png)
+
+![image](https://user-images.githubusercontent.com/42113942/131222973-8f62d73e-c8f5-4579-a534-6457d684a3ff.png)
+
+- 사인 함수와 코사인 함수의 값을 임베딩 벡터에 더해주므로서 단어의 순서 정보를 더하여 줌. 
+- pos, i, dmodel? 
+- 위의 함수를 이해하기 위해서는 위에서 본 임베딩 벡터와 포지셔널 인코딩의 덧셈은 사실 임베딩 벡터가 모여 만들어진 문장 벡터 행렬과 포지셔널 인코딩 행렬의 덧셈 연산을 통해 이루어진다는 점을 이해해야 함.
+
+![image](https://user-images.githubusercontent.com/42113942/131223059-9b1eb569-e4f2-4f22-840f-7bf4ed4e4d98.png)
+
+- pos: 입력 문장에서의 임베딩 벡터의 위치
+- i: 임베딩 벡터 내의 차원의 인덱스
+
+- 임베딩 벡터 내의 각 차원의 인덱스가 짝수인 경우에는 사인 함수의 값을 사용하고 홀수인 경우에는 코사인 함수의 값을 사용함.
+- dmodel: 트랜스포머의 모든 층의 출력 차원을 의미하는 트랜스포머의 하이퍼파라미터
+- 위 그림에서는 마치 4로 표현되었지만 실제 논문에서는 512의 값을 가짐.
+
+- 위와 같은 포지셔널 인코딩 방법을 사용하면 순서 정보가 보존됨.
+- 각 임베딩 벡터에 포지셔널 인코딩값을 더하면 같은 단어라고 하더라도 문장 내의 위치에 따라서 트랜스포머의 입력으로 들어가는 임베딩 벡터의 값이 달라짐.
+- 트랜스포머의 입력은 순서 정보가 고려된 임베딩 벡터
+
+- 코드
+
+```
+class PositionalEncoding(tf.keras.layers.Layer):
+  def __init__(self, position, d_model):
+    super(PositionalEncoding, self).__init__()
+    self.pos_encoding = self.positional_encoding(position, d_model)
+
+  def get_angles(self, position, i, d_model):
+    angles = 1 / tf.pow(10000, (2 * (i // 2)) / tf.cast(d_model, tf.float32))
+    return position * angles
+
+  def positional_encoding(self, position, d_model):
+    angle_rads = self.get_angles(
+        position=tf.range(position, dtype=tf.float32)[:, tf.newaxis],
+        i=tf.range(d_model, dtype=tf.float32)[tf.newaxis, :],
+        d_model=d_model)
+
+    # 배열의 짝수 인덱스(2i)에는 사인 함수 적용
+    sines = tf.math.sin(angle_rads[:, 0::2])
+
+    # 배열의 홀수 인덱스(2i+1)에는 코사인 함수 적용
+    cosines = tf.math.cos(angle_rads[:, 1::2])
+
+    angle_rads = np.zeros(angle_rads.shape)
+    angle_rads[:, 0::2] = sines
+    angle_rads[:, 1::2] = cosines
+    pos_encoding = tf.constant(angle_rads)
+    pos_encoding = pos_encoding[tf.newaxis, ...]
+
+    print(pos_encoding.shape)
+    return tf.cast(pos_encoding, tf.float32)
+
+  def call(self, inputs):
+    return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]
+```
+
+- 50 × 128의 크기를 가지는 포지셔널 인코딩 행렬을 시각화
+  - 입력 문장의 단어가 50개이면서, 각 단어가 128차원의 임베딩 벡터를 가질 때 사용할 수 있는 행렬
+  
+```
+# 문장의 길이 50, 임베딩 벡터의 차원 128
+sample_pos_encoding = PositionalEncoding(50, 128)
+
+plt.pcolormesh(sample_pos_encoding.pos_encoding.numpy()[0], cmap='RdBu')
+plt.xlabel('Depth')
+plt.xlim((0, 128))
+plt.ylabel('Position')
+plt.colorbar()
+plt.show()
+```
+```
+(1, 50, 128) 
+```  
+
+![image](https://user-images.githubusercontent.com/42113942/131223296-1508ce3a-6e86-4d77-8d10-0e71eddf0702.png)
+
+## 17.1.5. 어텐션(Attention)
+- 트랜스포머에서 사용되는 세 가지의 어텐션
+
+![image](https://user-images.githubusercontent.com/42113942/131223313-141a3d38-3919-4670-9d2a-742f94124bf5.png)
+
