--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -152,3 +152,32 @@ plt.show()
 
 ![image](https://user-images.githubusercontent.com/42113942/131223313-141a3d38-3919-4670-9d2a-742f94124bf5.png)
 
+- 1) Encoder Self-Attention: 인코더에서 이루어짐. 본질적으로 Query, Key, Value가 동일한 경우
+- 2) Masked Decoder Self-Attention: 디코더에서 이루어짐.
+- 3) Encoder-Decoder Attention: 디코더에서 이루어짐. Query가 디코더의 벡터인 반면에 Key와 Value가 인코더의 벡터이므로 셀프 어텐션이라고 부르지 않음.
+  - 주의할 점은 여기서 Query, Key 등이 같다는 것은 벡터의 값이 같다는 것이 아니라 벡터의 출처가 같다는 의미
+
+- 정리하면 다음과 같음.
+``` 
+인코더의 셀프 어텐션 : Query = Key = Value
+디코더의 마스크드 셀프 어텐션 : Query = Key = Value
+디코더의 인코더-디코더 어텐션 : Query : 디코더 벡터 / Key = Value : 인코더 벡터
+``` 
+  
+![image](https://user-images.githubusercontent.com/42113942/131223384-5d429ef3-303e-4a17-805c-5554dd5f677f.png)
+
+- 위 그림은 트랜스포머의 아키텍처에서 세 가지 어텐션이 각각 어디에서 이루어지는지를 보여줌.
+- 세 개의 어텐션에 추가적으로 '멀티 헤드'라는 이름이 붙어있는데, 이는 트랜스포머가 어텐션을 병렬적으로 수행하는 방법을 의미함(뒤에서 설명).
+  
+## 17.1.6. 인코더(Encoder)
+- 인코더의 구조
+
+![image](https://user-images.githubusercontent.com/42113942/131223402-22136f6d-ba7d-4dc1-96bf-ef8dd29d072f.png)
+
+- 트랜스포머는 하이퍼파라미터인 num_layers 개수의 인코더 층을 쌓음.
+  - 논문에서는 총 6개 인코더 층 사용
+- 인코더를 하나의 층이라는 개념으로 생각한다면, 하나의 인코더 층은 크게 총 2개의 서브층(sublayer)으로 나뉘어짐. => 셀프 어텐션과 피드 포워드 신경망
+- 멀티 헤드 셀프 어텐션은 셀프 어텐션을 병렬적으로 사용하였다는 의미
+- 포지션 와이즈 피드 포워드 신경망은 우리가 알고있는 일반적인 피드 포워드 신경망
+  
+## 17.1.7. 인코더의 셀프 어텐션
