--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -181,3 +181,6 @@ plt.show()
 - 포지션 와이즈 피드 포워드 신경망은 우리가 알고있는 일반적인 피드 포워드 신경망
   
 ## 17.1.7. 인코더의 셀프 어텐션
+- 앞서 배웠던 어텐션 함수에 대해서 복습하고, 셀프 어텐션이 앞서 배웠던 어텐션과 무엇이 다른지 이해함.
+
+1) 셀프 어텐션의 의미와 이점
