--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -184,3 +184,50 @@ plt.show()
 - 앞서 배웠던 어텐션 함수에 대해서 복습하고, 셀프 어텐션이 앞서 배웠던 어텐션과 무엇이 다른지 이해함.
 
 1) 셀프 어텐션의 의미와 이점
+- 어텐션 함수는 주어진 '쿼리(Query)'에 대해서 모든 '키(Key)'와의 유사도를 각각 구함.
+- 구해낸 이 유사도를 가중치로 하여 키와 맵핑되어있는 각각의 '값(Value)'에 반영함.
+- 유사도가 반영된 '값(Value)'을 모두 가중합하여 리턴함.
+  
+![image](https://user-images.githubusercontent.com/42113942/131238710-4ba5cc09-b985-4662-bfcd-b1e69a6a33e5.png)
+
+- 셀프 어텐션(self-attention)은 어텐션을 자기 자신에게 수행한다는 의미임.
+
+- seq2seq에서 어텐션을 사용할 경우의 Q, K, V의 정의
+```
+Q = Query : t 시점의 디코더 셀에서의 은닉 상태
+K = Keys : 모든 시점의 인코더 셀의 은닉 상태들
+V = Values : 모든 시점의 인코더 셀의 은닉 상태들
+```  
+- 그런데 사실 t 시점이라는 것은 계속 변화하면서 반복적으로 쿼리를 수행하므로 결국 전체 시점에 대해서 일반화를 할 수 있음.
+```  
+Q = Querys : 모든 시점의 디코더 셀에서의 은닉 상태들
+K = Keys : 모든 시점의 인코더 셀의 은닉 상태들
+V = Values : 모든 시점의 인코더 셀의 은닉 상태들
+```  
+- 기존에는 디코더 셀의 은닉 상태가 Q이고 인코더 셀의 은닉 상태가 K라는 점에서 Q와 K가 서로 다른 값을 가지고 있었음. 그런데 셀프 어텐션에서는 Q, K, V가 전부 동일함.
+```  
+Q : 입력 문장의 모든 단어 벡터들
+K : 입력 문장의 모든 단어 벡터들
+V : 입력 문장의 모든 단어 벡터들
+```  
+-  셀프 어텐션을 통해 얻을 수 있는 대표적인 효과
+
+![image](https://user-images.githubusercontent.com/42113942/131238767-5e026356-0a4a-4339-b2d0-af68e6241e0e.png)
+
+- '그 동물은 길을 건너지 않았다. 왜냐하면 그것은 너무 피곤하였기 때문이다.'
+- 그것(it)은 길(street)? 동물(animal)?
+- 셀프 어텐션은 입력 문장 내의 단어들끼리 유사도를 구하므로서 그것(it)이 동물(animal)과 연관되었을 확률이 높다는 것을 찾아냄.
+
+- 트랜스포머에서의 셀프 어텐션의 동작 메커니즘
+
+2) Q, K, V 벡터 얻기
+- 우선 각 단어 벡터들로부터 Q벡터, K벡터, V벡터를 얻는 작업을 거침.
+- 이 Q벡터, K벡터, V벡터들은 초기 입력인 dmodel의 차원을 가지는 단어 벡터들보다 더 작은 차원을 가짐.
+- dmodel=512차원, Q벡터, K벡터, V벡터=64차원
+  
+- 64는 트랜스포머의 또 다른 하이퍼파라미터인 num_heads로 결정됨.
+- dmodel을 num_heads로 나눈 값을 각 Q벡터, K벡터, V벡터의 차원으로 결정함.
+- 논문에서는 num_heads=8
+- 아래 예시는 student라는 단어 벡터를 Q, K, V벡터로 변환하는 과정
+
+![image](https://user-images.githubusercontent.com/42113942/131238898-3850404e-dff0-461e-999f-7af70441d9d4.png)
