--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -45,6 +45,7 @@
   - 논문에서는 인코더와 디코더 각 6개 사용함(위 2번째 그림).
 
 [비교] RNN을 사용한 어텐션 메커니즘
+
 ![image](https://user-images.githubusercontent.com/42113942/131273295-e032f61e-0c67-436d-8873-9b23218745dc.png)
 
 ![image](https://user-images.githubusercontent.com/42113942/131215120-4b21660a-089f-443f-a6d1-17c9f2cbd218.png)
@@ -83,12 +84,14 @@
 ![image](https://user-images.githubusercontent.com/42113942/131223059-9b1eb569-e4f2-4f22-840f-7bf4ed4e4d98.png)
 
 - pos: 입력 문장에서의 임베딩 벡터의 위치
-- i: 임베딩 벡터 내의 차원의 인덱스
+- i: 임베딩 벡터 내의 차원의 인덱스; 임베딩 벡터 내의 각 차원의 인덱스가 짝수인 경우에는 사인 함수의 값을 사용하고 홀수인 경우에는 코사인 함수의 값을 사용함.
+- dmodel: 트랜스포머의 모든 층의 출력 차원을 의미하는 트랜스포머의 하이퍼파라미터; 위 그림에서는 마치 4로 표현되었지만 실제 논문에서는 512의 값을 가짐.
 
-- 임베딩 벡터 내의 각 차원의 인덱스가 짝수인 경우에는 사인 함수의 값을 사용하고 홀수인 경우에는 코사인 함수의 값을 사용함.
+- 위와 같은 포지셔널 인코딩 방법을 사용하면 순서 정보가 보존됨.
+- 각 임베딩 벡터에 포지셔널 인코딩값을 더하면 같은 단어라고 하더라도 문장 내의 위치에 따라서 트랜스포머의 입력으로 들어가는 임베딩 벡터의 값이 달라짐 => 트랜스포머의 입력은 순서 정보가 고려된 임베딩 벡터
 
-- 사인 함수, 코사인 함수를 사용하는 이유? (https://yngie-c.github.io/nlp/2020/07/01/nlp_transformer/ 참고)
-- 포지셔널 인코딩의 조건: 1)각 위치마다 유일한 값을 출력해야 함(두 단어의 위치가 같을 수는 없음). 2) 길이가 다른 문장의 단어 위치를 나타낼 때에도 단어의 상대적인 거리가 같으면 같은 차이를 보여야 함. 
+- 포지셔널 인코딩에 사인 함수, 코사인 함수를 사용하는 이유? (https://yngie-c.github.io/nlp/2020/07/01/nlp_transformer/ 참고)
+  - 포지셔널 인코딩의 조건: 1)각 위치마다 유일한 값을 출력해야 함(두 단어의 위치가 같을 수는 없음). 2) 길이가 다른 문장의 단어 위치를 나타낼 때에도 단어의 상대적인 거리가 같으면 같은 차이를 보여야 함. 
 
 [예시]
 ```
@@ -98,39 +101,35 @@
 ```
 - 첫 번째 문장에서 “나”와 “아름다운”은 사이에 4개의 형태소를 두고 있고, 마찬가지로 두 번째 문장에서도 “책상”과 “아이”는 4개의 형태소를 사이에 두고 떨어져 있음.
 
-- 1) “1, 2, 3, 4 …” 처럼 단어 순서대로 고유한 값을 부여할 경우
+1) “1, 2, 3, 4 …” 처럼 단어 순서대로 고유한 값을 부여할 경우
 ```
 1: ‘어머님’, 2: ‘나’, 3: ‘는’, 4: ‘별’, 5: ‘하나’, 6: ‘에’, 7: ‘아름다운’, 8: ‘말’, 9: ‘한마디’, 10: ‘씩’, 11: ‘불러’, 12: ‘봅니다’
 
 1: ‘소학교’, 2: ‘때’, 3: ‘책상’, 4: ‘을’, 5: ‘같이’, 6: ‘했’, 7: ‘던’, 8: ‘아이’, 9: ‘들’, 10: ‘의’, 11: ‘이름’, 12: ‘과’, 13: ‘패’, 14: ‘경’, 15: ‘옥’, 16: ‘이런’, 17: ‘이국’, 18: ‘소녀’, 19: ‘들’, 20: ‘의’, 21: ‘이름’, 22: ‘과’, 23: ‘벌써’, 24: ‘애기’, 25: ‘어머니’, 26: ‘된’, 27: ‘계집애’, 28: ‘들’, 29: ‘의’, 30: ‘이름’, 31: ‘과’, 32: ‘가난’, 33: ‘한’, 34: ‘이웃’, 35: ‘사람’, 36: ‘들’, 37: ‘의’, 38: ‘이름’, 39: ‘과’, 40: ‘비둘기’, 41: ‘강아지’, 42: ‘토끼’, 43: ‘노새’, 44: ‘노루’, 45: ‘프란시스’, 46: ‘쟘’, 47: ‘라이너’, 48: ‘마리아’, 49: ‘릴케’, 50: ‘이런’, 51: ‘시인’, 52: ‘의’, 53: ‘이름’, 54: ‘을’, 55: ‘불러’, 56: ‘봅니다’
 ```
-- 위와 같이 인코딩 값을 부여하게 되면 긴 문장에서 맨 뒤에 위치한 토큰의 값이 매우 커짐. 
-- 포지셔널 인코딩 값이 매우 커지게 되면 원래의 인풋 임베딩 값에 영향을 주게 됨.
+  - 위와 같이 인코딩 값을 부여하게 되면 긴 문장에서 맨 뒤에 위치한 토큰의 값이 매우 커짐. 
+  - 포지셔널 인코딩 값이 매우 커지게 되면 원래의 인풋 임베딩 값에 영향을 주게 됨.
 
-- 2) [0,1]로 범위를 정해놓고 등분할 경우
+2) [0,1]로 범위를 정해놓고 등분할 경우
 ```
 0: ‘어머님’, 0.091: ‘나’, 0.182: ‘는’, 0.273: ‘별’, 0.364: ‘하나’, 0.455: ‘에’, 0.545: ‘아름다운’, 0.636: ‘말’, 0.727: ‘한마디’, 0.818: ‘씩’, 0.909: ‘불러’, 1: ‘봅니다’
 
 0: ‘소학교’, 0.018: ‘때’, 0.036: ‘책상’, 0.055: ‘을’, 0.073: ‘같이’, 0.091: ‘했’, 0.109: ‘던’, 0.127: ‘아이’, 0.145: ‘들’, 0.164: ‘의’, 0.182: ‘이름’, 0.2: ‘과’, 0.218: ‘패’, 0.236: ‘경’, 0.255: ‘옥’, 0.273: ‘이런’, 0.291: ‘이국’, 0.309: ‘소녀’, 0.327: ‘들’, 0.345: ‘의’, 0.364: ‘이름’, 0.382: ‘과’, 0.4: ‘벌써’, 0.418: ‘애기’, 0.436: ‘어머니’, 0.455: ‘된’, 0.473: ‘계집애’, 0.491: ‘들’, 0.509: ‘의’, 0.527: ‘이름’, 0.545: ‘과’, 0.564: ‘가난’, 0.582: ‘한’, 0.6: ‘이웃’, 0.618: ‘사람’, 0.636: ‘들’, 0.655: ‘의’, 0.673: ‘이름’, 0.691: ‘과’, 0.709: ‘비둘기’, 0.727: ‘강아지’, 0.745: ‘토끼’, 0.764: ‘노새’, 0.782: ‘노루’, 0.8: ‘프란시스’, 0.818: ‘쟘’, 0.836: ‘라이너’, 0.855: ‘마리아’, 0.873: ‘릴케’, 0.891: ‘이런’, 0.909: ‘시인’, 0.927: ‘의’, 0.945: ‘이름’, 0.964: ‘을’, 0.982: ‘불러’, 1: ‘봅니다’
 ```
-- 첫 번째 문장에서 “어머님”과 “나”, 두 번째 문장에서 “소학교”와 “때”는 모두 바로 옆 단어이지만 첫 번째 문장에서의 차이는 0.091이고 두 번째 문장에서는 0.018으로 5배나 차이남.
+  - 첫 번째 문장에서 “어머님”과 “나”, 두 번째 문장에서 “소학교”와 “때”는 모두 바로 옆 단어이지만 첫 번째 문장에서의 차이는 0.091이고 두 번째 문장에서는 0.018으로 5배나 차이남.
 
-- 사인 함수, 코사인 함수를 사용할 경우 논문에서는 이런 조건을 모두 만족함.
+3) 사인 함수, 코사인 함수를 사용할 경우 논문에서는 이런 조건을 모두 만족함.
+
 ![image](https://user-images.githubusercontent.com/42113942/131277573-2b2509ba-b5ba-4a17-a428-8b386ddce15a.png)
  
- 
-- 아래의 그림은 위 함수를 사용하여 사용하여 포지셔널 인코딩한 단어 사이의 거리를 시각화한 것. 
-- 왼쪽 그래프는 10개의 단어로 이루어진 문장의 모든 단어 사이의 거리를, 오른쪽 그래프는 50개의 단어로 이루어진 문장에서 앞부분 10개의 단어 사이의 거리를 시각화
+  - 아래의 그림은 포지셔널 인코딩 함수를 사용하여 사용하여 포지셔널 인코딩한 단어 사이의 거리를 시각화한 것. 
+  - 왼쪽 그래프는 10개의 단어로 이루어진 문장의 모든 단어 사이의 거리를, 오른쪽 그래프는 50개의 단어로 이루어진 문장에서 앞부분 10개의 단어 사이의 거리를 시각화
+
 ![image](https://user-images.githubusercontent.com/42113942/131277624-8389de50-39e5-450d-a926-b7d3523a884e.png)
-- 두 그래프로부터 문장의 길이가 달라지더라도 단어 사이의 거리는 보존됨; 문장의 단어가 몇 개이든 항상 바로 옆 단어는 3.714만큼, 그 옆 단어는 6.967만큼 차이가 나게 됨.
-- 게다가 문장의 길이가 길어져도 포지셔널 인코딩 값이 한없이 커지지 않음.
-- 멀리 떨어질수록 증가폭이 점점 떨어지기 때문에 “W1”과 “W2”사이의 거리는 3이상이지만, “W1”과 “W10”사이의 거리는 12.37로 10배가 아니라 4배 정도의 차이가 남.
 
-- dmodel: 트랜스포머의 모든 층의 출력 차원을 의미하는 트랜스포머의 하이퍼파라미터; 위 그림에서는 마치 4로 표현되었지만 실제 논문에서는 512의 값을 가짐.
+  - 두 그래프로부터 문장의 길이가 달라지더라도 단어 사이의 거리는 보존됨: 문장의 단어가 몇 개이든 항상 바로 옆 단어는 3.714만큼, 그 옆 단어는 6.967만큼 차이가 나게 됨.
+  - 게다가 문장의 길이가 길어져도 포지셔널 인코딩 값이 한없이 커지지 않음: 멀리 떨어질수록 증가폭이 점점 떨어지기 때문에 “W1”과 “W2”사이의 거리는 3이상이지만, “W1”과 “W10”사이의 거리는 12.37로 10배가 아니라 4배 정도의 차이가 남.
 
-- 위와 같은 포지셔널 인코딩 방법을 사용하면 순서 정보가 보존됨.
-- 각 임베딩 벡터에 포지셔널 인코딩값을 더하면 같은 단어라고 하더라도 문장 내의 위치에 따라서 트랜스포머의 입력으로 들어가는 임베딩 벡터의 값이 달라짐.
-- 트랜스포머의 입력은 순서 정보가 고려된 임베딩 벡터
 
 - 코드
 
