--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -48,6 +48,8 @@
 
 ![image](https://user-images.githubusercontent.com/42113942/131273295-e032f61e-0c67-436d-8873-9b23218745dc.png)
 
+트랜스포머 메커니즘
+
 ![image](https://user-images.githubusercontent.com/42113942/131215120-4b21660a-089f-443f-a6d1-17c9f2cbd218.png)
 
 - 위 그림은 인코더로부터 정보를 전달받아 디코더가 출력 결과를 만들어내는 트랜스포머 구조를 보여줌.
