--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -132,7 +132,6 @@
   - 두 그래프로부터 문장의 길이가 달라지더라도 단어 사이의 거리는 보존됨: 문장의 단어가 몇 개이든 항상 바로 옆 단어는 3.714만큼, 그 옆 단어는 6.967만큼 차이가 나게 됨.
   - 게다가 문장의 길이가 길어져도 포지셔널 인코딩 값이 한없이 커지지 않음: 멀리 떨어질수록 증가폭이 점점 떨어지기 때문에 “W1”과 “W2”사이의 거리는 3이상이지만, “W1”과 “W10”사이의 거리는 12.37로 10배가 아니라 4배 정도의 차이가 남.
 
-
 - 코드
 
 ```
@@ -142,7 +141,7 @@ class PositionalEncoding(tf.keras.layers.Layer):
     self.pos_encoding = self.positional_encoding(position, d_model)
 
   def get_angles(self, position, i, d_model):
-    angles = 1 / tf.pow(10000, (2 * (i // 2)) / tf.cast(d_model, tf.float32))
+    angles = 1 / tf.pow(10000, (2 * (i // 2)) / tf.cast(d_model, tf.float32)) # tf.pow(a, b): a의 b제곱, tf.cast(): 텐서를 새로운 type으로 cast ex) 정수형 -> 부동소수점형
     return position * angles
 
   def positional_encoding(self, position, d_model):
@@ -169,6 +168,8 @@ class PositionalEncoding(tf.keras.layers.Layer):
   def call(self, inputs):
     return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]
 ```
+
+![image](https://user-images.githubusercontent.com/42113942/131278300-6b5b9875-e811-4fbc-b27b-d05d489a0334.png)
 
 - 50 × 128의 크기를 가지는 포지셔널 인코딩 행렬을 시각화
   - 입력 문장의 단어가 50개이면서, 각 단어가 128차원의 임베딩 벡터를 가질 때 사용할 수 있는 행렬
