--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -134,7 +134,7 @@
 
 - 코드
 
-```
+```python
 class PositionalEncoding(tf.keras.layers.Layer):
   def __init__(self, position, d_model):
     super(PositionalEncoding, self).__init__()
@@ -146,7 +146,7 @@ class PositionalEncoding(tf.keras.layers.Layer):
 
   def positional_encoding(self, position, d_model):
     angle_rads = self.get_angles(
-        position=tf.range(position, dtype=tf.float32)[:, tf.newaxis],
+        position=tf.range(position, dtype=tf.float32)[:, tf.newaxis], # tf.range(): 0부터 position-1까지, tf.newaxis: 추가하고 싶은 위치 
         i=tf.range(d_model, dtype=tf.float32)[tf.newaxis, :],
         d_model=d_model)
 
@@ -156,8 +156,8 @@ class PositionalEncoding(tf.keras.layers.Layer):
     # 배열의 홀수 인덱스(2i+1)에는 코사인 함수 적용
     cosines = tf.math.cos(angle_rads[:, 1::2])
 
-    angle_rads = np.zeros(angle_rads.shape)
-    angle_rads[:, 0::2] = sines
+    angle_rads = np.zeros(angle_rads.shape) 
+    angle_rads[:, 0::2] = sines 
     angle_rads[:, 1::2] = cosines
     pos_encoding = tf.constant(angle_rads)
     pos_encoding = pos_encoding[tf.newaxis, ...]
@@ -166,7 +166,7 @@ class PositionalEncoding(tf.keras.layers.Layer):
     return tf.cast(pos_encoding, tf.float32)
 
   def call(self, inputs):
-    return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :]
+    return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :] # 임베딩 벡터 + 포지셔널 인코딩
 ```
 
 ![image](https://user-images.githubusercontent.com/42113942/131278300-6b5b9875-e811-4fbc-b27b-d05d489a0334.png)
@@ -196,9 +196,9 @@ plt.show()
 
 ![image](https://user-images.githubusercontent.com/42113942/131223313-141a3d38-3919-4670-9d2a-742f94124bf5.png)
 
-- 1) Encoder Self-Attention: 인코더에서 이루어짐. 본질적으로 Query, Key, Value가 동일한 경우
-- 2) Masked Decoder Self-Attention: 디코더에서 이루어짐.
-- 3) Encoder-Decoder Attention: 디코더에서 이루어짐. Query가 디코더의 벡터인 반면에 Key와 Value가 인코더의 벡터이므로 셀프 어텐션이라고 부르지 않음.
+1) Encoder Self-Attention: 인코더에서 이루어짐. 본질적으로 Query, Key, Value가 동일한 경우
+2) Masked Decoder Self-Attention: 디코더에서 이루어짐.
+3) Encoder-Decoder Attention: 디코더에서 이루어짐. Query가 디코더의 벡터인 반면에 Key와 Value가 인코더의 벡터이므로 셀프 어텐션이라고 부르지 않음.
   - 주의할 점은 여기서 Query, Key 등이 같다는 것은 벡터의 값이 같다는 것이 아니라 벡터의 출처가 같다는 의미
 
 - 정리하면 다음과 같음.
@@ -227,8 +227,8 @@ plt.show()
 ## 17.1.7. 인코더의 셀프 어텐션
 - 앞서 배웠던 어텐션 함수에 대해서 복습하고, 셀프 어텐션이 앞서 배웠던 어텐션과 무엇이 다른지 이해함.
 
-1) 셀프 어텐션의 의미와 이점
-- 어텐션 함수는 주어진 '쿼리(Query)'에 대해서 모든 '키(Key)'와의 유사도를 각각 구함.
+### 1) 셀프 어텐션의 의미와 이점
+- 어텐션 함수는 주어진 '쿼리(Query)'에 대해서 모든 '키(Key)'와의 유사도(어텐션 스코어)를 각각 구함.
 - 구해낸 이 유사도를 가중치로 하여 키와 맵핑되어있는 각각의 '값(Value)'에 반영함.
 - 유사도가 반영된 '값(Value)'을 모두 가중합하여 리턴함.
   
@@ -262,16 +262,13 @@ V : 입력 문장의 모든 단어 벡터들
 - 그것(it)은 길(street)? 동물(animal)?
 - 셀프 어텐션은 입력 문장 내의 단어들끼리 유사도를 구하므로서 그것(it)이 동물(animal)과 연관되었을 확률이 높다는 것을 찾아냄.
 
-- 트랜스포머에서의 셀프 어텐션의 동작 메커니즘
-
-2) Q, K, V 벡터 얻기
+### 2) Q, K, V 벡터 얻기
 - 우선 각 단어 벡터들로부터 Q벡터, K벡터, V벡터를 얻는 작업을 거침.
 - 이 Q벡터, K벡터, V벡터들은 초기 입력인 dmodel의 차원을 가지는 단어 벡터들보다 더 작은 차원을 가짐.
-- dmodel=512차원, Q벡터, K벡터, V벡터=64차원
+  - dmodel=512차원, Q벡터, K벡터, V벡터=64차원
   
 - 64는 트랜스포머의 또 다른 하이퍼파라미터인 num_heads로 결정됨.
-- dmodel을 num_heads로 나눈 값을 각 Q벡터, K벡터, V벡터의 차원으로 결정함.
-- 논문에서는 num_heads=8
+- dmodel을 num_heads로 나눈 값을 각 Q벡터, K벡터, V벡터의 차원으로 결정함(논문에서는 num_heads=8).
 - 아래 예시는 student라는 단어 벡터를 Q, K, V벡터로 변환하는 과정
 
 ![image](https://user-images.githubusercontent.com/42113942/131238898-3850404e-dff0-461e-999f-7af70441d9d4.png)
@@ -279,44 +276,43 @@ V : 입력 문장의 모든 단어 벡터들
 - 기존의 벡터로부터 더 작은 벡터는 가중치 행렬을 곱하므로서 완성됨.
 - 각 가중치 행렬은 dmodel X (dmodel/num_heads)의 크기를 가짐.
 - 이 가중치 행렬은 훈련 과정에서 학습됨.
-- 논문에서는 dmodel=512, num_heads=8이므로 64의 크기를 가지는 Q, K, V벡터를 얻음.
 - 모든 단어 벡터에 위와 같은 과정을 거치면 I, am, a, student는 각각의 Q, K, V 벡터를 얻음.
   
-3) 스케일드 닷-프로덕트 어텐션(Scaled dot-product Attention)
+### 3) 스케일드 닷-프로덕트 어텐션(Scaled dot-product Attention)
 - Q, K, V 벡터를 얻었다면 지금부터는 기존에 배운 어텐션 메커니즘과 동일함.
 - 각 Q 벡터는 모든 K 벡터에 대해서 어텐션 스코어를 구하고, 어텐션 분포를 구한 뒤에 이를 사용하여 모든 V 벡터를 가중합하여 어텐션 값 또는 컨텍스트 벡터를 구하고, 이를 모든 Q 벡터에 대해서 반복함.
   
 - 어텐션 챕터에 사용했던 내적만을 사용하는 어텐션 함수 
+
   ![image](https://user-images.githubusercontent.com/42113942/131239046-5faddbab-df9c-4cd7-a300-57ef5132a262.png)
 
 - 위 값을 특정값으로 나눠준 어텐션 함수 => 트랜스포머에서 사용하는 어텐션 함수
+
   ![image](https://user-images.githubusercontent.com/42113942/131239078-24a51d62-8296-41ab-9e55-87fb2a77c2d5.png)
   
 - 스케일드 닷-프로덕트 어텐션(Scaled dot-product Attention): 닷-프로덕트 어텐션(dot-product attention)에서 값을 스케일링하는 것을 추가하였다는 의미
   
 ![image](https://user-images.githubusercontent.com/42113942/131239081-ae3f0ff0-2ee1-4f8c-9044-00d97f693e6e.png)
 
-- 우선 단어 I에 대한 Q벡터를 기준으로 설명
-- 지금부터 설명하는 과정은 am에 대한 Q벡터, a에 대한 Q벡터, student에 대한 Q벡터에 대해서도 모두 동일한 과정을 거침. 
+- 우선 단어 I에 대한 Q벡터를 기준으로 설명; 지금부터 설명하는 과정은 am에 대한 Q벡터, a에 대한 Q벡터, student에 대한 Q벡터에 대해서도 모두 동일한 과정을 거침. 
   
-- 위의 그림은 단어 I에 대한 Q 벡터가 모든 K 벡터에 대해서 어텐션 스코어를 구하는 것을 보여줌.
-- 위의 128과 32는 저자가 임의로 가정한 수치임.
+- 위의 그림은 단어 I에 대한 Q 벡터가 모든 K 벡터에 대해서 어텐션 스코어를 구하는 것을 보여줌(128과 32는 저자가 임의로 가정한 수치).
   
 - 위의 그림에서 어텐션 스코어는 각각 단어 I가 단어 I, am, a, student와 얼마나 연관되어 있는지를 보여주는 수치
 - 트랜스포머에서는 두 벡터의 내적값을 스케일링하는 값으로 다음을 사용함.
+
   ![image](https://user-images.githubusercontent.com/42113942/131239162-cd346414-a4fe-4832-a5d1-4823aa2bd832.png)
 
   ![image](https://user-images.githubusercontent.com/42113942/131239179-49c63699-4c66-41de-b859-134269a43fc9.png)
   
 ![image](https://user-images.githubusercontent.com/42113942/131239183-e734abfa-88d2-4412-8db0-2145299b3535.png)
 
-- 이제 어텐션 스코어에 소프트맥스 함수를 사용하여 어텐션 분포(Attention Distribution)을 구하고, 각 V 벡터와 가중합하여 어텐션 값(Attention Value)을 구함.
-- 이를 단어 I에 대한 어텐션 값 또는 단어 I에 대한 컨텍스트 벡터(context vector)라고도 부름.
-- 이제 am에 대한 Q벡터, a에 대 Q벡터, student에 대한 Q벡터에 대해서도 모두 동일한 과정을 반복하여 각각에 대한 어텐션 값을 구함.
+- 이제 어텐션 스코어에 소프트맥스 함수를 사용하여 어텐션 분포(Attention Distribution)을 구하고, 각 V 벡터와 가중합하여 어텐션 값(Attention Value)을 구함. 이를 단어 I에 대한 어텐션 값 또는 단어 I에 대한 컨텍스트 벡터(context vector)라고도 부름.
+- 이제 am에 대한 Q벡터, a에 대한 Q벡터, student에 대한 Q벡터에 대해서도 모두 동일한 과정을 반복하여 각각에 대한 어텐션 값을 구함.
   
 - 그런데 굳이 이렇게 각 Q 벡터마다 일일히 따로 연산할 필요가 있을까?
 
-4) 행렬 연산으로 일괄 처리하기
+### 4) 행렬 연산으로 일괄 처리하기
 - 위의 과정들은 벡터 연산이 아니라 행렬 연산을 사용하면 일괄 계산이 가능함.
 - 실제로는 행렬 연산으로 구현됨.
   
@@ -329,7 +325,7 @@ V : 입력 문장의 모든 단어 벡터들
   
 ![image](https://user-images.githubusercontent.com/42113942/131239257-98ecce46-5b94-4d2f-bbf0-1f40d7e7e35b.png)
 
-- 다시 말해 위의 그림의 결과 행렬의 값에 전체적으로 루트 dk를 나누어주면 이는 각 행과 열이 어텐션 스코어값을 가지는 행렬이 됨.
+- 다시 말해 위의 그림의 결과 행렬의 값에 전체적으로 √dk를 나누어주면 이는 각 행과 열이 어텐션 스코어값을 가지는 행렬이 됨.
   - I 행과 student 열의 값은 I의 Q벡터와 student의 K 벡터의 어텐션 스코어와 동일한 행렬이 된다는 것
 
 - 어텐션 스코어 행렬을 구하였다면 남은 것은 어텐션 분포를 구하고, 이를 사용하여 모든 단어에 대한 어텐션 값을 구하기
@@ -344,14 +340,14 @@ V : 입력 문장의 모든 단어 벡터들
   ![image](https://user-images.githubusercontent.com/42113942/131239339-600450d9-b106-4eb2-900f-e681fe6adf7a.png)
 
 - 위 행렬 연산에 사용된 행렬의 크기
-  - 입력 문장의 길이 = seq_len, Q, K 벡터 크기 = dk, V 벡터 크기: dv
+  - 입력 문장의 길이 = seq_len, Q 벡터와 K 벡터 크기 = dk, V 벡터 크기: dv
   - 문장 행렬의 크기 = (seq_len, dmodel)
   - Q, K 행렬의 크기 = (seq_len, dk); V 행렬의 크기 = (seq_len, dv)
   - WQ, Wk = (dmodel, dk); Wv = (dmodel, dv)
   - 어탠션 값 행렬 a의 크기 = (seq_len, dv)
   
 5) 스케일드 닷-프로덕트 어텐션 구현하기
-``` 
+```python
 def scaled_dot_product_attention(query, key, value, mask):
   # query 크기 : (batch_size, num_heads, query의 문장 길이, d_model/num_heads)
   # key 크기 : (batch_size, num_heads, key의 문장 길이, d_model/num_heads)
