--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -169,8 +169,6 @@ class PositionalEncoding(tf.keras.layers.Layer):
     return inputs + self.pos_encoding[:, :tf.shape(inputs)[1], :] # 임베딩 벡터 + 포지셔널 인코딩
 ```
 
-![image](https://user-images.githubusercontent.com/42113942/131278300-6b5b9875-e811-4fbc-b27b-d05d489a0334.png)
-
 - 50 × 128의 크기를 가지는 포지셔널 인코딩 행렬을 시각화
   - 입력 문장의 단어가 50개이면서, 각 단어가 128차원의 임베딩 벡터를 가질 때 사용할 수 있는 행렬
   
@@ -340,13 +338,13 @@ V : 입력 문장의 모든 단어 벡터들
   ![image](https://user-images.githubusercontent.com/42113942/131239339-600450d9-b106-4eb2-900f-e681fe6adf7a.png)
 
 - 위 행렬 연산에 사용된 행렬의 크기
-  - 입력 문장의 길이 = seq_len, Q 벡터와 K 벡터 크기 = dk, V 벡터 크기: dv
+  - 입력 문장의 길이 = seq_len; Q 벡터와 K 벡터 크기 = dk; V 벡터 크기= dv
   - 문장 행렬의 크기 = (seq_len, dmodel)
   - Q, K 행렬의 크기 = (seq_len, dk); V 행렬의 크기 = (seq_len, dv)
   - WQ, Wk = (dmodel, dk); Wv = (dmodel, dv)
   - 어탠션 값 행렬 a의 크기 = (seq_len, dv)
   
-5) 스케일드 닷-프로덕트 어텐션 구현하기
+### 5) 스케일드 닷-프로덕트 어텐션 구현하기
 ```python
 def scaled_dot_product_attention(query, key, value, mask):
   # query 크기 : (batch_size, num_heads, query의 문장 길이, d_model/num_heads)
@@ -381,7 +379,7 @@ def scaled_dot_product_attention(query, key, value, mask):
 
 - scaled_dot_product_attention 함수가 정상 작동하는지 테스트 temp_q, temp_k, temp_v라는 임의의 Query, Key, Value 행렬을 만들고, 이를 scaled_dot_product_attention 함수에 입력으로 넣어 함수가 리턴하는 값을 출력해볼 것
 
-```
+```python
 # 임의의 Query, Key, Value인 Q, K, V 행렬 생성
 np.set_printoptions(suppress=True)
 temp_k = tf.constant([[10,0,0],
@@ -397,14 +395,14 @@ temp_q = tf.constant([[0, 10, 0]], dtype=tf.float32)  # (1, 3)
 ```
 - 여기서 주목할 점은 Query에 해당하는 temp_q의 값 [0, 10, 0]은 Key에 해당하는 temp_k의 두번째 값 [0, 10, 0]과 일치함. 그렇다면 어텐션 분포와 어텐션 값은?
 
-```
+```python
 # 함수 실행
 temp_out, temp_attn = scaled_dot_product_attention(temp_q, temp_k, temp_v, None)
 print(temp_attn) # 어텐션 분포(어텐션 가중치의 나열)
 print(temp_out) # 어텐션 값
 ```
   
-```
+```python
 tf.Tensor([[0. 1. 0. 0.]], shape=(1, 4), dtype=float32)
 tf.Tensor([[10.  0.]], shape=(1, 2), dtype=float32)
 ```
@@ -413,13 +411,13 @@ tf.Tensor([[10.  0.]], shape=(1, 2), dtype=float32)
 - 이번에는 Query의 값만 다른 값으로 바꿔보고 함수를 실행
   - Query값 [0, 0, 10]은 Key의 세번째 값과, 네번째 값 두 개의 값 모두와 일치하는 값
 
-```
+```python
 temp_q = tf.constant([[0, 0, 10]], dtype=tf.float32)
 temp_out, temp_attn = scaled_dot_product_attention(temp_q, temp_k, temp_v, None)
 print(temp_attn) # 어텐션 분포(어텐션 가중치의 나열)
 print(temp_out) # 어텐션 값
 ```
-```
+```python
 tf.Tensor([[0.  0.  0.5 0.5]], shape=(1, 4), dtype=float32)
 tf.Tensor([[550.    5.5]], shape=(1, 2), dtype=float32)
 ```
@@ -427,13 +425,13 @@ tf.Tensor([[550.    5.5]], shape=(1, 2), dtype=float32)
 - 결과적으로 나오는 값 [550, 5.5]는 Value의 세번째 값 [100, 5]에 0.5를 곱한 값과 네번째 값 [1000, 6]에 0.5를 곱한 값의 원소별 합
 
 -  이번에는 하나가 아닌 3개의 Query의 값을 함수의 입력으로 사용
-```
+```python
 temp_q = tf.constant([[0, 0, 10], [0, 10, 0], [10, 10, 0]], dtype=tf.float32)  # (3, 3)
 temp_out, temp_attn = scaled_dot_product_attention(temp_q, temp_k, temp_v, None)
 print(temp_attn) # 어텐션 분포(어텐션 가중치의 나열)
 print(temp_out) # 어텐션 값
 ```
-```
+```python
 tf.Tensor(
 [[0.  0.  0.5 0.5]
  [0.  1.  0.  0. ]
@@ -444,7 +442,7 @@ tf.Tensor(
  [  5.5   0. ]], shape=(3, 2), dtype=float32)
 ```
 
-6) 멀티 헤드 어텐션(Multi-head Attention)
+### 6) 멀티 헤드 어텐션(Multi-head Attention)
 - 이제 num_heads의 의미와 왜 dmodel의 차원을 가진 단어 벡터를 가지고 어텐션을 하지 않고 차원을 축소시킨 벡터로 어텐션을 수행하였는지 이해해 볼 것
 
 ![image](https://user-images.githubusercontent.com/42113942/131239639-d8a9f0c6-6300-4c21-ab3b-200d164251a7.png)
@@ -472,12 +470,12 @@ tf.Tensor(
   -  첫번째 서브층인 멀티-헤드 어텐션과 두번째 서브층인 포지션 와이즈 피드 포워드 신경망을 지나면서 인코더의 입력으로 들어올 때의 행렬의 크기는 계속 유지되어야 함.
   - 트랜스포머는 다수의 인코더를 쌓은 형태인데(논문에서는 인코더가 6개), 인코더에서의 입력의 크기가 출력에서도 동일 크기로 계속 유지되어야만 다음 인코더에서도 다시 입력이 될 수 있기 때문
   
-7) 멀티 헤드 어텐션(Multi-head Attention) 구현하기
+### 7) 멀티 헤드 어텐션(Multi-head Attention) 구현하기
 - 멀티 헤드 어텐션에서는 크게 두 종류의 가중치 행렬이 나옴.
   - Q, K, V 행렬을 만들기 위한 가중치 행렬인 WQ, WK, WV 행렬과 바로 어텐션 헤드들을 연결(concatenation) 후에 곱해주는 WO 행렬
   - 가중치 행렬을 곱하는 것을 구현 상에서는 입력을 밀집층(Dense layer)를 지나게 함.
   
-```
+```python
 Dense(units)
 ```  
 
@@ -488,7 +486,7 @@ Dense(units)
   4. 나눠졌던 헤드들을 연결(concatenatetion)한다.
   5. WO에 해당하는 밀집층을 지나게 한다.
   
-``` 
+```python
 class MultiHeadAttention(tf.keras.layers.Layer):
 
   def __init__(self, d_model, num_heads, name="multi_head_attention"):
@@ -556,10 +554,10 @@ class MultiHeadAttention(tf.keras.layers.Layer):
     return outputs
 ```  
   
-8) 패딩 마스크(Padding Mask)
+### 8) 패딩 마스크(Padding Mask)
 - 앞서 구현한 스케일드 닷 프로덕트 어텐션 함수 내부를 보면 mask라는 값을 인자로 받아서, 이 mask값에다가 -1e9라는 아주 작은 음수값을 곱한 후 어텐션 스코어 행렬에 더해주고 있음.
  
-```  
+```python
 def scaled_dot_product_attention(query, key, value, mask):
 ... 중략 ...
     logits += (mask * -1e9) # 어텐션 스코어 행렬인 logits에 mask*-1e9 값을 더해주고 있다.
@@ -587,17 +585,17 @@ def scaled_dot_product_attention(query, key, value, mask):
 - 패딩 마스크를 구현하는 방법은 입력된 정수 시퀀스에서 패딩 토큰의 인덱스인지, 아닌지를 판별하는 함수를 구현하는 것. 
 - 아래의 함수는 정수 시퀀스에서 0인 경우에는 1로 변환하고, 그렇지 않은 경우에는 0으로 변환하는 함수
 
-``` 
+```python
 def create_padding_mask(x):
   mask = tf.cast(tf.math.equal(x, 0), tf.float32)
   # (batch_size, 1, 1, key의 문장 길이)
   return mask[:, tf.newaxis, tf.newaxis, :]
 ``` 
 - 임의의 정수 시퀀스 입력을 넣어서 어떻게 변환되는지 살펴봄.
-``` 
+```python
 print(create_padding_mask(tf.constant([[1, 21, 777, 0, 0]])))
 ```
-```
+```python
 tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
 ```
   
@@ -711,7 +709,7 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
   
 ## 17.1.10. 인코더 구현하기
 - 지금까지 배운 내용을 바탕으로 인코더를 구현한 코드는 다음과 같음.
-```
+```python
 def encoder_layer(dff, d_model, num_heads, dropout, name="encoder_layer"):
   inputs = tf.keras.Input(shape=(None, d_model), name="inputs")
 
@@ -753,7 +751,7 @@ def encoder_layer(dff, d_model, num_heads, dropout, name="encoder_layer"):
 ## 17.1.11. 인코더 쌓기
 - 인코더 층을 num_layers개만큼 쌓고, 마지막 인코더 층에서 얻는 (seq_len, d_model) 크기의 행렬을 디코더로 보내주므로서 트랜스포머 인코더의 인코딩 연산이 끝나게 됨.
 - 아래의 코드는 인코더 층을 num_layers개만큼 쌓는 코드
-```
+```python
 def encoder(vocab_size, num_layers, dff,
             d_model, num_heads, dropout,
             name="encoder"):
