--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -341,7 +341,7 @@ V : 입력 문장의 모든 단어 벡터들
   - 입력 문장의 길이 = seq_len; Q 벡터와 K 벡터 크기 = dk; V 벡터 크기= dv
   - 문장 행렬의 크기 = (seq_len, dmodel)
   - Q, K 행렬의 크기 = (seq_len, dk); V 행렬의 크기 = (seq_len, dv)
-  - WQ, Wk = (dmodel, dk); Wv = (dmodel, dv)
+  - WQ, WK = (dmodel, dk); WV = (dmodel, dv) # 가중치 행렬
   - 어탠션 값 행렬 a의 크기 = (seq_len, dv)
   
 ### 5) 스케일드 닷-프로덕트 어텐션 구현하기
@@ -353,7 +353,7 @@ def scaled_dot_product_attention(query, key, value, mask):
   # padding_mask : (batch_size, 1, 1, key의 문장 길이)
 
   # Q와 K의 곱. 어텐션 스코어 행렬.
-  matmul_qk = tf.matmul(query, key, transpose_b=True)
+  matmul_qk = tf.matmul(query, key, transpose_b=True) # key 행렬 transpose
 
   # 스케일링
   # dk의 루트값으로 나눠준다.
@@ -362,6 +362,7 @@ def scaled_dot_product_attention(query, key, value, mask):
 
   # 마스킹. 어텐션 스코어 행렬의 마스킹 할 위치에 매우 작은 음수값을 넣는다.
   # 매우 작은 값이므로 소프트맥스 함수를 지나면 행렬의 해당 위치의 값은 0이 된다.
+  # 아직 배우지 않은 내용으로 지금은 무시하고 넘어감.
   if mask is not None:
     logits += (mask * -1e9)
 
@@ -375,7 +376,7 @@ def scaled_dot_product_attention(query, key, value, mask):
   return output, attention_weights
 ```
 - Q 행렬과 K 행렬을 전치한 행렬을 곱하고, 소프트맥스 함수를 사용하여 어텐션 분포 행렬을 얻은 뒤에 V 행렬과 곱함.
-- mask가 사용되는 if문은 아직 배우지 않은 내용으로 지금은 무시하고 넘어감.
+
 
 - scaled_dot_product_attention 함수가 정상 작동하는지 테스트 temp_q, temp_k, temp_v라는 임의의 Query, Key, Value 행렬을 만들고, 이를 scaled_dot_product_attention 함수에 입력으로 넣어 함수가 리턴하는 값을 출력해볼 것
 
@@ -463,8 +464,8 @@ tf.Tensor(
   
 ![image](https://user-images.githubusercontent.com/42113942/131239693-7f565d18-f99c-4c50-b0e1-52e3a9df3b15.png)
 
-- 어텐션 헤드를 모두 연결한 행렬은 또 다른 가중치 행렬 Wo을 곱하게 되는데, 이렇게 나온 결과 행렬이 멀티-헤드 어텐션의 최종 결과물임.
-- 위의 그림은 어텐션 헤드를 모두 연결한 행렬이 가중치 행렬 Wo과 곱해지는 과정을 보여줌. 이때 결과물인 멀티-헤드 어텐션 행렬은 인코더의 입력이었던 문장 행렬의 (seq_len, dmodel) 크기와 동일함.
+- 어텐션 헤드를 모두 연결한 행렬은 또 다른 가중치 행렬 WO을 곱하게 되는데, 이렇게 나온 결과 행렬이 멀티-헤드 어텐션의 최종 결과물임.
+- 위의 그림은 어텐션 헤드를 모두 연결한 행렬이 가중치 행렬 WO과 곱해지는 과정을 보여줌. 이때 결과물인 멀티-헤드 어텐션 행렬은 인코더의 입력이었던 문장 행렬의 (seq_len, dmodel) 크기와 동일함.
 
 - 다시 말해 인코더의 첫번째 서브층인 멀티-헤드 어텐션 단계를 끝마쳤을 때, 인코더의 입력으로 들어왔던 행렬의 크기가 아직 유지되고 있음을 기억할 것
   -  첫번째 서브층인 멀티-헤드 어텐션과 두번째 서브층인 포지션 와이즈 피드 포워드 신경망을 지나면서 인코더의 입력으로 들어올 때의 행렬의 크기는 계속 유지되어야 함.
@@ -564,21 +565,21 @@ def scaled_dot_product_attention(query, key, value, mask):
 ... 중략 ...
 ```  
   
-- 이는 입력 문장에 <PAD> 토큰이 있을 경우 어텐션에서 사실상 제외하기 위한 연산임.
-- 아래는 <PAD>가 포함된 입력 문장에 대해서 어텐션을 수행하고 어텐션 스코어 행렬을 얻는 과정
+- 이는 입력 문장에 PAD 토큰이 있을 경우 어텐션에서 사실상 제외하기 위한 연산임.
+- 아래는 PAD가 포함된 입력 문장에 대해서 어텐션을 수행하고 어텐션 스코어 행렬을 얻는 과정
   
   ![image](https://user-images.githubusercontent.com/42113942/131239834-108657a6-f215-463c-a356-64e36b9ee569.png)
   
-- 그런데 사실 단어 <PAD>의 경우에는 실질적인 의미를 가진 단어가 아님. 그래서 트랜스포머에서는 Key의 경우에 <PAD> 토큰이 존재한다면 이에 대해서는 유사도를 구하지 않도록 마스킹(Masking)을 해주기로 함.
+- 그런데 사실 단어 PAD의 경우에는 실질적인 의미를 가진 단어가 아님. 그래서 트랜스포머에서는 Key의 경우에 PAD 토큰이 존재한다면 이에 대해서는 유사도를 구하지 않도록 마스킹(Masking)을 해주기로 함.
   - 마스킹: 어텐션에서 제외하기 위해 값을 가린다는 의미
   
-- 어텐션 스코어 행렬에서 행에 해당하는 문장은 Query이고, 열에 해당하는 문장은 Key. 그리고 Key에 <PAD>가 있는 경우에는 해당 열 전체를 마스킹함.
+- 어텐션 스코어 행렬에서 행에 해당하는 문장은 Query이고, 열에 해당하는 문장은 Key. 그리고 Key에 PAD가 있는 경우에는 해당 열 전체를 마스킹함.
   
   ![image](https://user-images.githubusercontent.com/42113942/131239856-bef6e07c-4d2a-49a1-9c18-a3ab28ced690.png)
 
 - 마스킹을 하는 방법은 어텐션 스코어 행렬의 마스킹 위치에 매우 작은 음수값을 넣어주는 것. 
   - 여기서 매우 작은 음수값이라는 것은 -1,000,000,000과 같은 -무한대에 가까운 수라는 의미
-  - 어텐션 스코어 행렬이 소프트맥스 함수를 지난 후에는 해당 위치의 값은 0에 굉장히 가까운 값이 되어 단어 간 유사도를 구하는 일에 <PAD> 토큰이 반영되지 않게 됨.
+  - 어텐션 스코어 행렬이 소프트맥스 함수를 지난 후에는 해당 위치의 값은 0에 굉장히 가까운 값이 되어 단어 간 유사도를 구하는 일에 PAD 토큰이 반영되지 않게 됨.
   
   ![image](https://user-images.githubusercontent.com/42113942/131239868-00de8963-9a3d-46b4-9ac6-c5267fd36981.png)
   
@@ -619,6 +620,10 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
   - x는 앞서 멀티 헤드 어텐션의 결과로 나온 (seq_len, dmodel)의 크기를 가지는 행렬
   - 가중치 행렬 W1은 (dmodel, dff)의 크기를 가지고, 가중치 행렬 W2는 (dff, dmodel)의 크기를 가짐.
   - 논문에서 은닉층의 크기 dff는 앞서 하이퍼파라미터를 정의할 때 언급했듯이 2,048의 크기를 가짐.
+ 
+ ![image](https://user-images.githubusercontent.com/42113942/131294373-bae1fd77-1aa2-411c-b2a1-5bb87748bdb9.png)
+
+- 512차원의 입력 벡터가 활성화 함수(Activation function)인 ReLU, 즉 max(0,input)을 지나 2048차원의 벡터가 된 뒤에 다시 512차원의 벡터로 출력됨.
 
 - 여기서 매개변수 W1, b1, W2, b2는 하나의 인코더 층 내에서는 다른 문장, 다른 단어들마다 정확하게 동일하게 사용되지만 인코더 층마다는 다른 값을 가짐.
   
@@ -645,7 +650,7 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
 - 위의 그림은 앞서 Position-wise FFNN를 설명할 때 사용한 앞선 그림에서 화살표와 Add & Norm(잔차 연결과 정규화 과정)을 추가한 그림
   - 추가된 화살표들은 서브층 이전의 입력에서 시작되어 서브층의 출력 부분을 향하고 있는 것에 주목할 것. 추가된 화살표가 어떤 의미를 갖고 있는지는 잔차 연결과 층 정규화를 배우고 나면 이해할 수 있음.
   
-1) 잔차 연결(Residual connection)
+### 1) 잔차 연결(Residual connection)
 - 잔차 연결(residual connection)의 의미를 이해하기 위해서 어떤 함수 H(x)에 대한 이야기를 해볼 것임.
   
   ![image](https://user-images.githubusercontent.com/42113942/131240110-346eddf2-acfa-4ac8-a7de-37c761eb1fb1.png)
@@ -659,14 +664,18 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
 - 이를 식으로 표현하면 x + Sublayer(x)라고 할 수 있음.
   
 - 가령, 서브층이 멀티 헤드 어텐션이었다면 잔차 연결 연산은 다음과 같음.
+
   ![image](https://user-images.githubusercontent.com/42113942/131240156-ef6f3ce6-ed95-450b-866c-e893d2de8b60.png)
 
   ![image](https://user-images.githubusercontent.com/42113942/131240157-3273a407-32c2-478a-92c3-3f9a23296f65.png)
 
 - 위 그림은 멀티 헤드 어텐션의 입력과 멀티 헤드 어텐션의 결과가 더해지는 과정을 보여줌.
-- 관련 논문 : https://arxiv.org/pdf/1512.03385.pdf
+- 이렇게 더해주면 역전파(Backpropagation)에서 그래디언트를 항상 1이상으로 유지하기 때문에 정보를 더 잘 보존함.
+  (https://yngie-c.github.io/nlp/2020/07/01/nlp_transformer/)
   
-2) 층 정규화(Layer Normalization)
+- 관련 논문 : https://arxiv.org/pdf/1512.03385.pdf
+
+### 2) 층 정규화(Layer Normalization)
 - 잔차 연결의 입력을 x, 잔차 연결과 층 정규화 두 가지 연산을 모두 수행한 후의 결과 행렬을 LN이라고 하였을 때, 잔차 연결 후 층 정규화 연산을 수식으로 표현하자면 다음과 같음.
   
  ![image](https://user-images.githubusercontent.com/42113942/131240174-38d0dcdc-f5e0-4d3d-a660-0a4c36479d56.png)
@@ -690,7 +699,7 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
   - 첫번째는 평균과 분산을 통한 정규화, 두번째는 감마와 베타를 도입하는 것
     - 우선 평균과 분산을 통해 xi를 정규화
     - xi는 벡터인 반면, 평균과 분산은 스칼라
-    - 벡터 xi의 각 차원을 k라고 하였을 때, xi,k는 다음의 수식과 같이 정규화할 수 있으.ㅁ
+    - 벡터 xi의 각 차원을 k라고 하였을 때, xi,k는 다음의 수식과 같이 정규화할 수 있음.
     - 다시 말해 벡터 xi의 각 k차원의 값이 다음과 같이 정규화됨.
   
     ![image](https://user-images.githubusercontent.com/42113942/131240335-6ca1c8bb-71db-41df-aa9e-0199168f7b81.png)
@@ -698,10 +707,11 @@ tf.Tensor([[[[0. 0. 0. 1. 1.]]]], shape=(1, 1, 1, 5), dtype=float32)
 - 입실론은 분모가 0이 되는 것을 방지하는 값
   
 - 이제 감마와 베타라는 벡터를 준비함. 단, 이들의 초기값은 각각 1과 0임
+
   ![image](https://user-images.githubusercontent.com/42113942/131240349-2c84c6f7-83fd-4db7-a49d-d088756ddcba.png)
-![image](https://user-images.githubusercontent.com/42113942/131240352-72c2e687-6340-4f30-873d-f653179caad6.png)
 
 - 감마와 벡터를 도입한 층 정규화의 최종 수식은 다음과 같음.
+
   ![image](https://user-images.githubusercontent.com/42113942/131240382-1a527153-5eac-4a91-8424-9cdb097b4ca0.png)
 
 - 관련 논문 : https://arxiv.org/pdf/1607.06450.pdf
@@ -742,8 +752,8 @@ def encoder_layer(dff, d_model, num_heads, dropout, name="encoder_layer"):
 ```
   
 - 우선 인코더의 입력으로 들어가는 문장에는 패딩이 있을 수 있으므로, 어텐션 시 패딩 토큰을 제외하도록 패딩 마스크를 사용함.
-  - 이는 MultiHeadAttention 함수의 mask의 인자값으로 padding_mask가 들어가는 이유임.
-- 인코더는 총 두 개의 서브층으로 이루어지는데, 멀티 헤드 어텐션과 피드 포워드 신경망
+  - MultiHeadAttention 함수의 mask의 인자값으로 padding_mask이 들어감.
+- 인코더는 총 두 개의 서브층으로 이루어지는데, 멀티 헤드 어텐션과 피드 포워드 신경망임.
 - 각 서브층 이후에는 드롭 아웃, 잔차 연결과 층 정규화가 수행됨.
   
 - 위 코드는 하나의 인코더 블록. 즉, 하나의 인코더 층을 구현하는 코드임. 물론, 실제로 트랜스포머는 num_layers 개수만큼의 인코더 층을 사용하므로 이를 여러번 쌓는 코드를 별도 구현해줄 필요가 있음.
