--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -785,4 +785,4 @@ def encoder(vocab_size, num_layers, dff,
   return tf.keras.Model(
       inputs=[inputs, padding_mask], outputs=outputs, name=name)
 ```
-  
+cf) embeddings *= tf.math.sqrt(tf.cast(d_model, tf.float32)): https://datascience.stackexchange.com/questions/87906/transformer-model-why-are-word-embeddings-scaled-before-adding-positional-encod/88159#88159  
