--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -786,3 +786,58 @@ def encoder(vocab_size, num_layers, dff,
       inputs=[inputs, padding_mask], outputs=outputs, name=name)
 ```
 cf) embeddings *= tf.math.sqrt(tf.cast(d_model, tf.float32)): https://datascience.stackexchange.com/questions/87906/transformer-model-why-are-word-embeddings-scaled-before-adding-positional-encod/88159#88159  
+
+## 17.1.12. 인코더에서 디코더로(From Encoder To Decoder)
+
+![image](https://user-images.githubusercontent.com/42113942/132118796-23ed7483-3f75-472e-9f0a-c85a2712a5f7.png)
+
+- 구현된 인코더는 총 num_layers만큼의 층 연산을 순차적으로 한 후에 마지막 층의 인코더의 출력을 디코더에게 전달함.
+- 디코더 또한 총 num_layers만큼의 연산을 하는데, 이때마다 인코더가 보낸 출력을 각 디코더 층 연산에 사용함.
+
+## 17.1.13. 디코더의 첫번째 서브층 : 셀프 어텐션과 룩-어헤드 마스크
+
+![image](https://user-images.githubusercontent.com/42113942/132118826-f4d4f642-bd84-4891-8ed3-bc4313bb5f4e.png)
+
+- 디코더도 인코더와 동일하게 임베딩 층과 포지셔널 인코딩을 거친 후의 문장 행렬이 입력
+- 트랜스포머 또한 seq2seq와 마찬가지로 교사 강요(Teacher Forcing)을 사용하여 훈련되므로 학습 과정에서 디코더는 번역할 문장에 해당되는 <sos> je suis étudiant의 문장 행렬을 한 번에 입력받음.
+- 그리고 디코더는 이 문장 행렬로부터 각 시점의 단어를 예측하도록 훈련됨.
+
+- seq2seq의 디코더에 사용되는 RNN 계열의 신경망은 입력 단어를 매 시점마다 순차적으로 받으므로 다음 단어 예측에 현재 시점 이전 이전에 입력된 단어들만 참고할 수 있음.
+- 반면, 트랜스포머는 문장 행렬로 입력을 한 번에 받으므로 현재 시점의 단어를 예측하고자 할 때, 입력 문장 행렬로부터 미래 시점의 단어까지도 참고할 수 있는 현상이 발생함.
+- 예) suis를 예측해야 하는 시점: seq2seq의 디코더라면 현재까지 디코더에 입력된 단어는 <sos>와 je뿐. 반면, 트랜스포머는 이미 문장 행렬로 <sos> je suis étudiant를 입력받음.
+
+- 트랜스포머의 디코더에서는 현재 시점의 예측에서 현재 시점보다 미래에 있는 단어들을 참고하지 못하도록 룩-어헤드 마스크(look-ahead mask)를 도입함. = '미리보기에 대한 마스크'
+  
+![image](https://user-images.githubusercontent.com/42113942/132120939-42103a97-1bb4-4870-b887-10bd45f462c8.png)
+
+- 룩-어헤드 마스크(look-ahead mask)는 디코더의 첫번째 서브층에서 이루어짐.
+- 디코더의 첫번째 서브층인 멀티 헤드 셀프 어텐션 층은 인코더의 첫번째 서브층인 멀티 헤드 셀프 어텐션 층과 동일한 연산을 수행함.
+- 다른 점은 어텐션 스코어 행렬에서 마스킹을 적용한다는 점만 다름.
+
+- 우선, 다음과 같이 셀프 어텐션을 통해 어텐션 스코어 행렬을 얻음.
+  
+![image](https://user-images.githubusercontent.com/42113942/132120971-26914fbe-f248-4664-b987-533dc09fefe1.png)
+
+- 이제 자기 자신보다 미래에 있는 단어들은 참고하지 못하도록 다음과 같이 마스킹함.
+
+![image](https://user-images.githubusercontent.com/42113942/132120977-9f8bdcb7-9d73-4703-8cd3-5bced98d2763.png)
+
+- 마스킹 된 후의 어텐션 스코어 행렬의 각 행을 보면 자기 자신과 그 이전 단어들만을 참고할 수 있음을 볼 수 있음.
+- 그 외에는 근본적으로 셀프 어텐션이라는 점과, 멀티 헤드 어텐션을 수행한다는 점에서 인코더의 첫번째 서브층과 같음.
+  
+- 룩-어헤드 마스크의 구현
+  - 앞서 구현한 스케일드 닷 프로덕트 어텐션 함수에 mask라는 인자로 전달됨.
+  - 패딩 마스킹을 써야하는 경우에는 스케일드 닷 프로덕트 어텐션 함수에 패딩 마스크를 전달하고, 룩-어헤드 마스킹을 써야하는 경우에는 스케일드 닷 프로덕트 어텐션 함수에 룩-어헤드 마스크를 전달하게 됨.
+  
+```python
+# 스케일드 닷 프로덕트 어텐션 함수를 다시 복습해봅시다.
+def scaled_dot_product_attention(query, key, value, mask):
+... 중략 ...
+    logits += (mask * -1e9) # 어텐션 스코어 행렬인 logits에 mask*-1e9 값을 더해주고 있다.
+... 중략 ...
+```
+  
+- 트랜스포머에는 총 세 가지 어텐션이 존재하며, 모두 멀티 헤드 어텐션을 수행하고, 멀티 헤드 어텐션 함수 내부에서 스케일드 닷 프로덕트 어텐션 함수를 호출하는데 각 어텐션 시 함수에 전달하는 마스킹은 다음과 같음.
+  - 인코더의 셀프 어텐션 : 패딩 마스크를 전달
+  - 디코더의 첫번째 서브층인 마스크드 셀프 어텐션 : 룩-어헤드 마스크를 전달 <-- 지금 배우고 있음.
+  - 디코더의 두번째 서브층인 인코더-디코더 어텐션 : 패딩 마스크를 전달
