--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -1070,6 +1070,8 @@ def loss_function(y_true, y_pred):
 - 트랜스포머의 경우 학습률(learning rate)은 고정된 값을 유지하는 것이 아니라, 학습 경과에 따라 변하도록 설계함.
   - 아래의 공식으로 학습률을 계산하여 사용하였으며, warmup_steps의 값으로는 4,000을 사용함.
   
+![image](https://user-images.githubusercontent.com/42113942/132121664-009c3b4d-ec1c-4dd0-8e5e-4fbd1abd3e8e.png)
+
 ```python
 class CustomSchedule(tf.keras.optimizers.schedules.LearningRateSchedule):
 
