--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -848,11 +848,24 @@ def scaled_dot_product_attention(query, key, value, mask):
 ```python
 # 디코더의 첫번째 서브층(sublayer)에서 미래 토큰을 Mask하는 함수
 def create_look_ahead_mask(x):
-  seq_len = tf.shape(x)[1]
-  look_ahead_mask = 1 - tf.linalg.band_part(tf.ones((seq_len, seq_len)), -1, 0)
+  seq_len = tf.shape(x)[1] # tf.shape(): 텐서의 구조를 반환함.
+  look_ahead_mask = 1 - tf.linalg.band_part(tf.ones((seq_len, seq_len)), -1, 0) # tf.ones(): 모든 요소가 1로 설정된 텐서를 생성함. 
+                                                                                # tf.linalg.band_part(): 가장 안쪽의 각 행렬에서 중앙 밴드 외부의 모든 것을 0으로 설정하는 텐서를 복사함.
   padding_mask = create_padding_mask(x) # 패딩 마스크도 포함
   return tf.maximum(look_ahead_mask, padding_mask)
 ```
+```python
+tf.linalg.band_part(tf.ones((5, 5)), -1, 0)
+``` 
+```python
+<tf.Tensor: shape=(5, 5), dtype=float32, numpy=
+array([[1., 0., 0., 0., 0.],
+       [1., 1., 0., 0., 0.],
+       [1., 1., 1., 0., 0.],
+       [1., 1., 1., 1., 0.],
+       [1., 1., 1., 1., 1.]], dtype=float32)> 
+``` 
+  
 - 임의의 정수 시퀀스 입력을 넣어서 결과를 봄: 패딩 마스크를 테스트 하기위해 세번째 위치에 정수 0을 넣음.
                                                   
 ```python
