--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -852,27 +852,38 @@ def create_look_ahead_mask(x):
   look_ahead_mask = 1 - tf.linalg.band_part(tf.ones((seq_len, seq_len)), -1, 0) # tf.ones(): 모든 요소가 1로 설정된 텐서를 생성함. 
                                                                                 # tf.linalg.band_part(): 가장 안쪽의 각 행렬에서 중앙 밴드 외부의 모든 것을 0으로 설정하는 텐서를 복사함.
   padding_mask = create_padding_mask(x) # 패딩 마스크도 포함
-  return tf.maximum(look_ahead_mask, padding_mask)
+  return tf.maximum(look_ahead_mask, padding_mask) # tf.maximum(): 두 텐서를 요소 별로 비교하여 최대 값을 반환
 ```
 ```python
+# tf.linalg.band_part()
 tf.linalg.band_part(tf.ones((5, 5)), -1, 0)
-``` 
-```python
 <tf.Tensor: shape=(5, 5), dtype=float32, numpy=
 array([[1., 0., 0., 0., 0.],
        [1., 1., 0., 0., 0.],
        [1., 1., 1., 0., 0.],
        [1., 1., 1., 1., 0.],
        [1., 1., 1., 1., 1.]], dtype=float32)> 
-``` 
   
+1 - tf.linalg.band_part(tf.ones((5, 5)), -1, 0)
+<tf.Tensor: shape=(5, 5), dtype=float32, numpy=
+array([[0., 1., 1., 1., 1.],
+       [0., 0., 1., 1., 1.],
+       [0., 0., 0., 1., 1.],
+       [0., 0., 0., 0., 1.],
+       [0., 0., 0., 0., 0.]], dtype=float32)>
+  
+# tf.maximum()
+x = tf.constant([0., 0., 0., 0.])
+y = tf.constant([-2., 0., 2., 5.])
+tf.maximum(x, y)
+<tf.Tensor: shape=(4,), dtype=float32, numpy=array([0., 0., 2., 5.], dtype=float32)>
+``` 
+
 - 임의의 정수 시퀀스 입력을 넣어서 결과를 봄: 패딩 마스크를 테스트 하기위해 세번째 위치에 정수 0을 넣음.
                                                   
 ```python
 print(create_look_ahead_mask(tf.constant([[1, 2, 0, 4, 5]])))
-```
-                                                  
-```python
+
 tf.Tensor(
 [[[[0. 1. 1. 1. 1.]
    [0. 0. 1. 1. 1.]
