--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -1079,7 +1079,7 @@ tf.keras.utils.plot_model(
 - 다중 클래스 분류 문제를 풀 예정이므로 크로스 엔트로피 함수를 손실 함수로 정의함.
 ```python
 def loss_function(y_true, y_pred):
-  y_true = tf.reshape(y_true, shape=(-1, MAX_LENGTH - 1))
+  y_true = tf.reshape(y_true, shape=(-1, MAX_LENGTH - 1)) # tf.reshape(tensor, shape): shape 한 구성 요소가 -1이면 전체 크기가 일정하게 유지되도록 해당 차원의 크기가 계산됨.
 
   loss = tf.keras.losses.SparseCategoricalCrossentropy(
       from_logits=True, reduction='none')(y_true, y_pred)
@@ -1118,8 +1118,6 @@ sample_learning_rate = CustomSchedule(d_model=128)
 plt.plot(sample_learning_rate(tf.range(200000, dtype=tf.float32)))
 plt.ylabel("Learning Rate")
 plt.xlabel("Train Step")
-  
-Text(0.5, 0, 'Train Step')
 ```
 
 ![image](https://user-images.githubusercontent.com/42113942/132121616-b7356ff9-08a2-44cc-85c0-9a504b8459fb.png)
